<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProtoStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="or_text">OR</string>
    <string name="forgot_pass_text"><u>Forgot your password?</u></string>

</resources>
