<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            android:background="@drawable/logintext_shape_selector"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userNameEditText"
            android:layout_below="@+id/userNameEditText"
            android:layout_marginTop="70dp"
            android:background="@drawable/logintext_shape_selector"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/loginbutton_shape_selector"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/or_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/registerbutton_shape_selector"
            android:text="@string/register_button" />

        <TextView
            android:id="@+id/forgot_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:text="@string/forgot_pass_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deep_orange_800" />

    </RelativeLayout>
</ScrollView>